[package]
name = "squadreplay"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
default-run = "squadreplay"
description = "Library-first Rust parser and CLI for Squad UE5 replay files"
license = "MPL-2.0"
readme = "README.md"
documentation = "https://docs.rs/squadreplay"
repository = "https://github.com/Codycody31/squad-replay"
keywords = ["squad", "replay", "parser", "cli", "ue5"]
categories = ["command-line-utilities", "parser-implementations"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[lib]
name = "squadreplay"
path = "src/lib.rs"

[[bin]]
name = "squadreplay"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]
bench-internals = []

[profile.bench-release]
inherits = "release"
debug = 1
strip = false
split-debuginfo = "packed"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"], optional = true }
crc32fast = "1.4"
rayon = "1.10"
regex = "1.10"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
zstd = { version = "0.13", features = ["zstdmt"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "classify"
harness = false
required-features = ["bench-internals"]
